--- a/index.Rmd
+++ b/index.Rmd
@@ -405,23 +405,24 @@ class: inverse, middle, left
 ]
 
 
-.panel[.panel-name[Copenhagen]
+.panel[.panel-name[Manchester]
 
 .pull-left[
-  <img src="images/Case study_Motivation/casestudy2.webp"
+  <img src="images/MancityCaseStudy.png"
   height="270px" style="display: block; margin-left: auto; margin-right: auto;"/>
   
   <div style="font-size: 14px;"> <!-- The image source font size -->
-  blablabla blablabla description blablabla Source: <a
-  href="https://en.antaranews.com/news/256325/jakarta-distributes-hydroponic-racks-to-aid-urban-farming-in-pe
-  santren"
-  style="color: #7910FF;">Originally from blabla, picture name</a> <!-- Hyper color -->
+  Roof level innovation offers climate resilient vision for Manchester Source: <a
+  href="https://www.polypipe.com/news/roof-level-innovation-offers-climate-resilient-vision-manchester"
+  style="color: #7910FF;">Originally from Civils & Green Urbanisation, Rooftop Greening in Mancity</a> <!-- Hyper color -->
   <!-- 额外图源记得写一下描述 -->
   </div>
 ]
 
 .pull-right[
-  * Jakarta (ANTARA) - The Jakarta Food Security, Marine, and Agriculture (KPKP)...
+  * Manchester developed a green roof strategy- Sustainable Cities: Options for Responding to Climate Change Impacts and Outcomes (SCORCHIO). Partnering with Manchester University, the project utilised an Urban Heat Island map to identify city areas susceptible to elevated temperatures exacerbated by climate change. 
+  
+  * Public buildings were selected as pilot projects for green roof retrofitting, focusing on reducing the heat island effect and air pollution. 
   
   <br> <!-- 空行做排版，可自行删除 -->
   <br>
