--- a/index.Rmd
+++ b/index.Rmd
@@ -710,7 +710,7 @@ class: inverse, middle, left
 
 
 # Methodology:
-# Using Remote Sensing for Identifying Rooftop Farming in Jakarta
+# Using Remote Sensing for Identifying Rooftop Farming/Gardening Potentials in Jakarta
 
 
 
@@ -808,22 +808,24 @@ class: inverse, middle, left
 
 
 .panelset[
-.panel[.panel-name[Workpack]
-
-<img src="images/WP_Breakdown.png" height="380px"/>
-
+.panel[.panel-name[Workpack Breakdown]
+<p align="center">
+<img src="images/WP_Breakdown.png" height="400px"/>
+</p>
 ]
 
 .panel[.panel-name[WBS]
 
-<img src="images/WBS.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/>
+<img src="images/WBS.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/>
 
 ]
 
 .panel[.panel-name[Gantt Chart]
 
-<img src="images/gantt.png" height="350px"/>
+<p align="center">
 
+<img src="images/gantt.png" height="400px"/>
+</p>
 ]
 
 
@@ -849,10 +851,11 @@ class: inverse, middle, left
 
 Part of the source data are published [here](https://ee-derekding727.projects.earthengine.app/view/jakartabuidlingandndvilookup) for preview.
 
+<p align="center">
 
 <iframe width="800" height="430" src="https://www.youtube.com/embed/iyGOVL74P30?si=MIp52Ks1F9r2Ypmh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-
+</p>
 
 
 
