--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Remote Sensing for Identifying Rooftop Farming and Gardening Potentials in Jakarta, Indonesia"
+title: "Green Rooftop - Remote Sensing for Identifying Rooftop Farming and Gardening Potentials in Jakarta, Indonesia"
 subtitle: ""
 author: "Sheng Hu, Zhaowei Cui, Lunan Wei, Mengyu Ding"
 institute: "CASA, UCL"
@@ -700,7 +700,7 @@ xaringanExtra::style_panelset_tabs(foreground = "honeydew", background = "seagre
 #### Super Indo
 
 
-* Committed to creating a better environment and community, Super Indo has now successfully opened its fifth garden with the most modern concept.
+* Committed to creating a better environment and community, Super Indo has now successfully opened its **fifth** garden with the most modern concept.
 
 
 
