--- a/index.Rmd
+++ b/index.Rmd
@@ -767,7 +767,7 @@ class: inverse, middle, left
 </p>
 
 .foognote[Original file available: <a href="illustrations/methodology_overview.pdf" download="methodology_overview.pdf" >
-  <img src="icons/pdf_icon.png" height="18px" alt="Download Original">
+  <img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original">
 </a>]
 
 ---
