--- a/index.Rmd
+++ b/index.Rmd
@@ -972,7 +972,7 @@ class: inverse, middle, left
 <img src="images/WP_Breakdown.png" height="400px"/>
 </p>
 
-.foognote[Original file available: <a href="illustrations/wp.pdf" download="wp.pdf" >
+.foognote[Original file available: <a href="illustrations/pm_all.pdf" download="pm_all.pdf" >
   <img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original">
 </a>]
 
@@ -983,9 +983,6 @@ class: inverse, middle, left
 
 <img src="images/WBS.png" height="440px" style="display: block; margin-left: auto; margin-right: auto;"/>
 
-.foognote[Original file available: <a href="illustrations/wbs.pdf" download="wbs.pdf" >
-  <img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original">
-</a>]
 
 
 
@@ -1000,9 +997,7 @@ class: inverse, middle, left
 </p>
 
 
-.foognote[Original file available: <a href="illustrations/gantt.pdf" download="gantt.pdf" >
-  <img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original">
-</a>]
+
 
 
 ]
@@ -1026,7 +1021,7 @@ class: inverse, middle, left
 
 <img src="images/personnelBudgetImage.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/>
 
-.foognote[Original file available: <a href="illustrations/budget_personnel.pdf" download="budget_personnel.pdf" >
+.foognote[Original file available: <a href="illustrations/budget_personnel.pdf" download="budget_all.pdf" >
   <img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original">
 </a>]
 
@@ -1037,11 +1032,6 @@ class: inverse, middle, left
 .panel[.panel-name[Other Budget]
 
 <img src="images/otherBudgetImage.png" height="440px" style="display: block; margin-left: auto; margin-right: auto;"/>
-
-.foognote[Original file available: <a href="illustrations/budget_other.pdf" download="budget_other.pdf" >
-  <img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original">
-</a>]
-
 
 
 ]
