--- a/index.Rmd
+++ b/index.Rmd
@@ -947,7 +947,7 @@ class: inverse, middle, left
 
 <img src="images/SWOTUpdate.png" height="440px" style="display: block; margin-left: auto; margin-right: auto;"/>
 
-.foognote[Original file available: <a href="illustrations/swot.pdf" download="swot_feasibility.pdf" >
+.foognote[Original file available: <a href="illustrations/swot_feasibility.pdf" download="swot_feasibility.pdf" >
   <img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original">
 </a>]
 
@@ -1176,9 +1176,10 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 .pull-right[
 ### Other contributions
 * Drive **economic growth**
+  * **urban regeneration** (develop attractions, building price appreciation, etc)
+  
   * potential increase in **job opportunities** and **economic activities**
   
-  * **urban regeneration** (develop attractions, building price appreciation, etc)
   
 * Effectively utilizing **urban spaces**
 
