--- a/index.Rmd
+++ b/index.Rmd
@@ -1199,7 +1199,7 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 * Delving deeper into **Rooftop Agriculture**.
   * Fine-grained recognition
   
-  * Our Rooftop index + Assigning optimal crops
+  * Our Rooftop index + Allocate optimal crops
 
 <br>
 
