--- a/index.Rmd
+++ b/index.Rmd
@@ -471,15 +471,6 @@ class: inverse, middle, left
 
 
 
----
-
-class: inverse, middle, left
-
-# Solution:
-
-# Rooftop Farming and Gardening
-
-
 
 
 ---
@@ -491,6 +482,25 @@ class: inverse, middle, left
 
 
 .panelset[
+
+
+
+
+.panel[.panel-name[Outcomes]
+
+
+
+* #### Capturing pollutants in the air
+* #### Providing shade and evaporative cooling
+* #### Enhancing urban food security
+* #### Utilizing rainwater
+* #### Increasing green spaces 
+* #### Attracting community participation.
+
+
+]
+
+
 
 
 .panel[.panel-name[Air polution]
@@ -580,6 +590,15 @@ Rooftop agriculture projects often attract community participation, fostering co
   <img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;">
 </div>
 
+
+
+---
+
+class: inverse, middle, left
+
+# Solution:
+
+# Rooftop Farming and Gardening
 
 
 
